--- a/webviewer_html/index.html
+++ b/webviewer_html/index.html
@@ -250,8 +250,8 @@
       <div class="radiobutton"><input type="checkbox" id="grafiek" onclick="toggleSlider()">show
         slider</input></div>
     </div>
-    <hr class="divider">
-    <div class="radiogroup">
+    <hr class="divider" style="display: none;">
+    <div class="radiogroup" style="display: none;">
       <div class="sectionheader">Transparency</div>
       <div class="range-wrap"><input type="range" min="0" max="100" value="0" class="slider" id="transparency"
           onChange="changeTransparency()"></div>
